add wasm files to lfs filter

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.wasm filter=lfs diff=lfs merge=lfs -text
 *.drc filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.mov filter=lfs diff=lfs merge=lfs -text
